overlay/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeinvaders
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: local.kubeinvaders.com
      http:
        paths:
          - path: /.*
            backend:
              serviceName: kubeinvaders
              servicePort: 8080
